syntax = "proto3";
import "google/protobuf/empty.proto";  

option csharp_namespace = "Avalanche.Security.Server.Client.V1.Protos";

package security;

service Security {
    rpc GetUsers (google.protobuf.Empty) returns (GetUsersResponse);
    rpc AddUser (AddUserRequest) returns (AddUserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (google.protobuf.Empty);
    rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty);
    rpc FindByUserName (FindByUserNameRequest) returns (FindByUserNameResponse);
}

//Requests
message FindByUserNameRequest {
    string userName = 1;
}

message AddUserRequest {
    UserMessage user = 1;
}

message UpdateUserRequest {
    UserMessage user = 1;
}

message DeleteUserRequest {
    int32 userId = 1;
}

//Responses
message FindByUserNameResponse {
    UserMessage user = 1;
}

message AddUserResponse {
    UserMessage user = 1;
}

message GetUsersResponse {
    repeated UserMessage users = 1;
}

message UserMessage {
    int32 Id = 1;
    string Email = 2;
    string UserName = 3;
    string FirstName = 4;
    string LastName = 5;
    string Password = 6;
}